@@ -3,13 +3,18 @@ package dev.fileeditor.votl.listeners;
 import java.time.OffsetDateTime;
 import java.util.EnumSet;
 import java.util.Optional;
+import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 
+import com.github.benmanes.caffeine.cache.Cache;
+import com.github.benmanes.caffeine.cache.Caffeine;
 import dev.fileeditor.votl.utils.database.managers.GuildVoiceManager.VoiceSettings;
+import dev.fileeditor.votl.utils.level.PlayerObject;
 import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.audit.ActionType;
 import net.dv8tion.jda.api.audit.AuditLogEntry;
 import net.dv8tion.jda.api.entities.Guild;
+import net.dv8tion.jda.api.entities.GuildVoiceState;
 import net.dv8tion.jda.api.entities.Member;
 import net.dv8tion.jda.api.entities.channel.unions.AudioChannelUnion;
 import net.dv8tion.jda.api.events.guild.voice.GuildVoiceGuildDeafenEvent;
@@ -26,13 +31,20 @@ import dev.fileeditor.votl.utils.database.DBUtil;
 import org.jetbrains.annotations.NotNull;
 
 public class VoiceListener extends ListenerAdapter {
-	
+
+	// cache users in voice for exp
+	// userId and start time
+	private final Cache<PlayerObject, Long> cache = Caffeine.newBuilder()
+		.expireAfterAccess(8, TimeUnit.MINUTES)
+		.build();
+
 	private final DBUtil db;
 	private final App bot;
 
-	public VoiceListener(App bot) {
+	public VoiceListener(App bot, ScheduledExecutorService executor) {
 		this.db = bot.getDBUtil();
 		this.bot = bot;
+		startRewardTask(executor);
 	}
 
 	@Override
@@ -44,7 +56,7 @@ public class VoiceListener extends ListenerAdapter {
 			.limit(1)
 			.queue(list -> {
 				if (!list.isEmpty()) {
-					AuditLogEntry entry = list.get(0);
+					AuditLogEntry entry = list.getFirst();
 					if (entry.getChangeByKey("mute")!=null && entry.getTargetIdLong() == event.getMember().getIdLong() && entry.getTimeCreated().isAfter(OffsetDateTime.now().minusSeconds(15))) {
 						bot.getLogger().voice.onVoiceMute(event.getMember(), event.isGuildMuted(), entry.getUserIdLong());
 						return;
@@ -63,7 +75,7 @@ public class VoiceListener extends ListenerAdapter {
 			.limit(1)
 			.queue(list -> {
 				if (!list.isEmpty()) {
-					AuditLogEntry entry = list.get(0);
+					AuditLogEntry entry = list.getFirst();
 					if (entry.getChangeByKey("deaf")!=null && entry.getTargetIdLong() == event.getMember().getIdLong() && entry.getTimeCreated().isAfter(OffsetDateTime.now().minusSeconds(15))) {
 						bot.getLogger().voice.onVoiceDeafen(event.getMember(), event.isGuildDeafened(), entry.getUserIdLong());
 						return;
@@ -76,15 +88,28 @@ public class VoiceListener extends ListenerAdapter {
 	@Override
 	public void onGuildVoiceUpdate(@NotNull GuildVoiceUpdateEvent event) {
 		Long masterVoiceId = db.getVoiceSettings(event.getGuild()).getChannelId();
+		// If joined master vc
 		AudioChannelUnion channelJoined = event.getChannelJoined();
 		if (channelJoined != null && masterVoiceId != null && channelJoined.getIdLong() == masterVoiceId) {
 			handleVoiceCreate(event.getGuild(), event.getMember());
 		}
 
+		// if left custom vc
 		AudioChannelUnion channelLeft = event.getChannelLeft();
 		if (channelLeft != null && db.voice.existsChannel(channelLeft.getIdLong()) && channelLeft.getMembers().isEmpty()) {
 			channelLeft.delete().reason("Custom channel, empty").queueAfter(500, TimeUnit.MILLISECONDS, null, new ErrorHandler().ignore(ErrorResponse.UNKNOWN_CHANNEL));
 			db.voice.remove(channelLeft.getIdLong());
+		}
+
+		// start reward counting
+		if (db.levels.getSettings(event.getGuild()).isVoiceEnabled()) {
+			if (channelJoined != null && channelLeft == null) {
+				// Joined vc first time
+				cache.put(new PlayerObject(event.getGuild().getIdLong(), event.getMember().getIdLong()), System.currentTimeMillis());
+			} else if (channelJoined == null && channelLeft != null) {
+				// left voice
+				handleUserLeave(event.getMember());
+			}
 		}
 	}
 
@@ -129,4 +154,56 @@ public class VoiceListener extends ListenerAdapter {
 				}
 			);
 	}
+
+	private boolean inVoice(GuildVoiceState state) {
+		return state != null && state.inAudioChannel();
+	}
+
+	private boolean isEligibleForRewards(GuildVoiceState state) {
+		return !state.isMuted() && !state.isDeafened() &&
+			!state.isSuppressed();
+	}
+
+	private void startRewardTask(ScheduledExecutorService executor) {
+		executor.scheduleAtFixedRate(() -> {
+			cache.asMap().forEach((player, joinTime) -> {
+				Member member = Optional.ofNullable(bot.JDA.getGuildById(player.guildId))
+					.map(g -> g.getMemberById(player.userId))
+					.orElse(null);
+
+				if (member == null) {
+					handleUserLeave(player);
+					return;
+				}
+
+				GuildVoiceState state = member.getVoiceState();
+				if (inVoice(state)) {
+					// In voice - check if not muted/deafened/AFK
+					if (isEligibleForRewards(state)) {
+						bot.getLevelUtil().rewardVoicePlayer(member, state.getChannel());
+					}
+				} else {
+					// Not in voice
+					handleUserLeave(player);
+				}
+			});
+		}, 3, 2, TimeUnit.MINUTES);
+	}
+
+	private void handleUserLeave(Member member) {
+		handleUserLeave(new PlayerObject(member));
+	}
+
+	private void handleUserLeave(PlayerObject player) {
+		Long timeJoined = cache.getIfPresent(player);
+
+		if (timeJoined != null) {
+			long duration = Math.round((System.currentTimeMillis()-timeJoined)/1000f); // to seconds
+			if (duration > 0) {
+				bot.getDBUtil().levels.addVoiceTime(player, duration);
+			}
+		}
+		cache.invalidate(player);
+	}
+
 }
